@startuml
title E-commerce

class Product {
  +id: UUID
  +name: String
  +price: int
  +stockQty: int
  +category: Category
  +isAvailable(): bool
}
class Category {
  +id: UUID
  +name: String
}
class Client {
  +id: UUID
  +name: String
  +email: String
  +cart: Cart
}
class Cart {
  +id: UUID
  +items: List«CartItem»
  +addItem(p: Product, qty: int)
  +removeItem(p: Product)
  +getTotal(): int
}
class CartItem {
  +product: Product
  +quantity: int
  +getSubtotal(): int
}
class Order {
  +id: UUID
  +client: Client
  +cart: Cart
  +items: List«OrderItem»
  +total: int
}
class OrderItem {
  +product: Product
  +quantity: int
  +priceAtOrder: int
}

interface ICommandCancelable {
  +execute()
  +undo()
}

interface IOrderObserver {
  +onOrderPlaced(order: Order)
}

class AddToCartCommand {
  -cart: Cart
  -product: Product
  -qty: int
  +execute()
  +undo()
}
class RemoveFromCartCommand {
  -cart: Cart
  -product: Product
  +execute()
  +undo()
}
class CartInvoker {
  -history: Stack«ICommandCancelable»
  +executeCommand(cmd: ICommandCancelable)
  +undoLast()
}
class WarehouseObserver {
  -warehouseName: String
  +onOrderPlaced(order: Order)
}

ICommandCancelable <|.. AddToCartCommand
ICommandCancelable <|.. RemoveFromCartCommand
CartInvoker o-- ICommandCancelable : history
AddToCartCommand --> Cart
RemoveFromCartCommand --> Cart

IOrderObserver <|.. WarehouseObserver
IOrderObserver ..> Order : observes

Product "1" -- "*" CartItem
Cart o-- "*" CartItem
Client "1" -- "1" Cart
Order "*" -- "1" Client
Order o-- "*" OrderItem
OrderItem "*" -- "1" Product
Product "*" -- "1" Category
Order --> Cart

@enduml